...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Cloudinary Demo" id="Wgb-Gk-IC0">
                        <barButtonItem key="backBarButtonItem" title="Back" id="jEN-zx-4gc"/>
                        <barButtonItem key="leftBarButtonItem" title="Widget" id="kVk-Th-lNP">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="goToWidgetBarButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="dT4-Hr-3F5" kind="show" id="MHh-Ft-F8G"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vqf-Aw-dbo">
                                                <rect key="frame" x="318" y="20" width="51" height="26.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="rotateStateSwitch"/>
                                                <connections>
                                                    <action selector="allowRotateChanged:" destination="dT4-Hr-3F5" eventType="valueChanged" id="ZjY-6e-GSQ"/>
                                                </connections>
                                            </switch>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                                <segments>
                                                    <segment title="off"/>
                                                    <segment title="on"/>
                                                    <segment title="disabled"/>
                                                </segments>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="aspectLockSegmented"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="initialAspectChanged:" destination="dT4-Hr-3F5" eventType="valueChanged" id="HP9-5d-giu"/>
                                                </connections>
                                            </segmentedControl>
                                        </subviews>
...
                                                <segments>
                                                    <segment title="many"/>
                                                    <segment title="one"/>
                                                    <segment title="none"/>
                                                </segments>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="initialImagesSegmented"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="initialImagesChanged:" destination="dT4-Hr-3F5" eventType="valueChanged" id="7dp-it-1bH"/>
                                                </connections>
                                            </segmentedControl>
                                        </subviews>
...
                                                <segments>
                                                    <segment title="many"/>
                                                    <segment title="one"/>
                                                    <segment title="none"/>
                                                </segments>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="initialVideosSegmented"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="initialVideosChanged:" destination="dT4-Hr-3F5" eventType="valueChanged" id="Gg4-HX-6dc"/>
                                                </connections>
                                            </segmentedControl>
                                        </subviews>
...
                            <constraint firstItem="zqX-FT-hBs" firstAttribute="top" secondItem="Vb8-Gz-sXb" secondAttribute="bottom" id="zaw-bk-RCU"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="uHv-71-mGd">
                        <barButtonItem key="rightBarButtonItem" title="present" id="H7m-qx-iqi">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="widgetSettingsPresentBarButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="presentWidget:" destination="dT4-Hr-3F5" id="vcw-vc-6V0"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
