...

import UIKit
import AVKit

class CLDVideoView: UIView {

    private(set) var videoControlsView: CLDVideoControlsView!
    private(set) var videoPlayerView  : CLDVideoPlayerView!
    private(set) var player           : AVPlayer
    
    /**
    Initializes the CLDVideoView

    - parameter frame:         The view's frame
...
