...
    
    private func createUI() {
        
        backgroundColor = transparentBackgroundColor
        
        playPauseButton = UIButton(type: .custom)
        playPauseButton.accessibilityIdentifier = "videoViewPausePlayButton"
        playPauseButton.setTitle("||", for: .normal)
        playPauseButton.addTarget(self, action: #selector(playPausePressed), for: .touchUpInside)
        playPauseButton.titleLabel?.font = playPauseButton.titleLabel?.font.withSize(40)
        addSubview(playPauseButton)
        playPauseButton.cld_addConstraintsToCenter(self)
    }
...
