...

class PhotoTableViewController: UITableViewController {

    //MARK: Properties
    @IBOutlet weak var message: UILabel!

    var photos = [Photo]()

    var cld = CLDCloudinary(configuration: CLDConfiguration(cloudName: AppDelegate.cloudName, secure: true))

    override func viewDidLoad() {
        super.viewDidLoad()
        // Use the edit button item provided by the table view controller.
...
